--- a/popup.html
+++ b/popup.html
@@ -3,21 +3,17 @@
 
 <head>
   <title>ConvergeHub Lead Generator</title>
-  <!-- <link rel="stylesheet" href="popup.css" />
-  <link rel="stylesheet" href="/css/bootstrap.css" />
-   -->
-
 </head>
 
 <body>
-  <div class="header" id="lead-panel-header">
+  <div class="header">
     <div class="header-left">
-      <!-- <span class="logo-section"><img src="images/main.png" /></span> -->
+      <span class="logo-section" title="drag to move"><img src="images/main.png" /></span>
       <h2>ConvergeHub Lead Generator</h2>
     </div>
 
-    <div id="lead-panel-close" class="close-button">X
-      <!-- <img src="images/close.svg" />X -->
+    <div id="close-button" class="close-button">
+      <img src="images/close.svg" />
     </div>
   </div>
 
@@ -173,8 +169,6 @@
       </div>
     </div>
   </div>
-  <!-- <script type="module" src="popup.js"></script> -->
-  <!-- <script src="/js/bootstrape.js"></script> -->
 </body>
 
 </html>
